# mpc-rbt-simulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml  tiago_driver_plugin.xml  world_to_map.py
.github/workflows/: test.yml
include/mpc-rbt-simulator/: Localization.hpp  RobotConfig.hpp  TiagoDriver.hpp
include/mpc_rbt_simulator/: RobotConfig.hpp
launch/: simulation.launch.py
maps/: empty_map_5cmpx.pgm  empty_map_5cmpx.yaml  map.pgm  map.yaml
resources/: tiago_model_ros.urdf  tiago_plugin.urdf  tiago_ros.urdf
resources/proto/: .TiagoBase.proto.swp  TiagoBase.proto
rviz/: config.rviz
src/: Localization.cpp  TiagoDriver.cpp  localization_node.cpp
tests/: CMakeLists.txt  localizationTest.cpp  tiagoDriverTest.cpp
worlds/: mpc-rbt-warehouse.wbt
